--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose"
   },
   "keywords": [
     "backend-testing"
@@ -13,6 +13,7 @@
   "author": "Karim Hamdi",
   "license": "ISC",
   "devDependencies": {
+    "jest": "^29.2.2",
     "nodemon": "^2.0.20"
   },
   "dependencies": {
