--- a/part9/b.intro_9.1-9.7/package.json
+++ b/part9/b.intro_9.1-9.7/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "ts-node": "ts-node",
-    "calculateBmi": "ts-node bmiCalculator.ts"
+    "calculateBmi": "ts-node bmiCalculator.ts",
+    "calculateExercises": "ts-node exerciceCalculator.ts"
   },
   "author": "Karim",
   "license": "ISC",
