--- a/part5/bloglist-frontend/package.json
+++ b/part5/bloglist-frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.27.2",
+    "eslint": "^8.31.0",
     "eslint-plugin-jest": "^27.1.5",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
