--- a/part5/bloglist-frontend/package.json
+++ b/part5/bloglist-frontend/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
     "axios": "^0.27.2",
     "eslint": "^8.31.0",
     "eslint-plugin-jest": "^27.1.5",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
